--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="description" content="Area of Triangle, in JavaScript" />
+  <meta name="description" content="Salary, in Java Script" />
   <meta name="keywords" content="mths, icd2o" />
   <meta name="author" content="Olivia TD" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png" />
   <link rel="manifest" href="./site.webmanifest" />
-  <title>Area of Triangle, in JavaScript</title>
+  <title>Salary, in Java Script</title>
 </head>
 
 <body>
@@ -24,16 +24,16 @@
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
     <header class="mdl-layout__header">
       <div class="mdl-layout__header-row">
-        <span class="mdl-layout-title">Area of Triangle, in JavaScript</span>
+        <span class="mdl-layout-title">Salary, in Java Script</span>
       </div>
     </header>
     <main class="mdl-layout__content">
       <div class="right-image">
-        <img src="./images/area_of_triangle.png"
-          alt="White sign with purple letters saying Area of Triangle along with the formula to calculate the area of a triangle, image" />
+        <img src="./images/income_tax.jpg"
+          alt="Image: The words income tax written on a notebook." />
       </div>
       <div class="page-content">
-        Please enter the triangle's base and height in cm.
+        Please enter your employment information.
       </div>
       <br />
       <form>
