--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <br />
         <!-- Accent-colored raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
-          onclick="calculateAreaOfTriangle()" type="button">
+          onclick="calculateUserPayAndTax()" type="button">
           Calculate
         </button>
       </form>
